--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ DB_USERNAME="root"
 DB_PASSWORD="pc1P172XzFi8OjySZucn"
 DB_HOST="rds-mysql-server.c2fj1ibupytz.ap-northeast-1.rds.amazonaws.com"
 DB_DATABASE="audience"
+
+SMTP_USERNAME=replace421@gmail.com
+SMTP_PASSWORD=nciwhvrazhswdeoh
